assert(_count > 0) failed: Negative counter when running runtime/NMT/MallocTrackingVerify.java

XMLWordPrintable

    • b40
    • Not verified

        Seen in jprt:

        #
        # A fatal error has been detected by the Java Runtime Environment:
        #
        # Internal Error (C:\jprt\T\P1\163041.mikael\s\hotspot\src\share\vm\services/mallocTracker.hpp:72), pid=5432, tid=8032
        # assert(_count > 0) failed: Negative counter
        #
        # JRE version: Java(TM) SE Runtime Environment (9.0) (build 1.9.0-internal-fastdebug-201409111630.mikael.hs-rt-b00)
        # Java VM: Java HotSpot(TM) Client VM (1.9.0-internal-201409111630.mikael.hs-rt-b00 mixed mode
        windows-x86 )

        # Core dump written. Default location: C:\jprt\T\P1\163041.mikael\s\hotspot\build\windows-i586\testoutput\JTwork\runtime\NMT\MallocTrackingVerify\hs_err_pid5432.mdmp
        #
        # If you would like to submit a bug report, please visit:
        # http://bugreport.sun.com/bugreport/crash.jsp
        #


        13aafa38 737d6c52 00000028 00000032 00000000 jvm!MallocSiteTable::deallocation_at+0x59 [c:\jprt\t\p1\163041.mikael\s\hotspot\src\share\vm\services\mallocsitetable.hpp @ 221]
        13aafa4c 737d6d99 13caeb48 13aafa94 737918d3 jvm!MallocHeader::release+0x82 [c:\jprt\t\p1\163041.mikael\s\hotspot\src\share\vm\services\malloctracker.cpp @ 84]
        13aafa58 737918d3 13caeb48 13caeb48 73a2fae0 jvm!MallocTracker::record_free+0x49 [c:\jprt\t\p1\163041.mikael\s\hotspot\src\share\vm\services\malloctracker.cpp @ 197]
        13aafa94 73794e9f 13caeb48 00000007 012ef9ec jvm!os::free+0x73 [c:\jprt\t\p1\163041.mikael\s\hotspot\src\share\vm\runtime\os.cpp @ 717]
        13aafaac 737951a0 73781b95 737c6327 13cbe400 jvm!PerfDataManager::destroy+0xbf [c:\jprt\t\p1\163041.mikael\s\hotspot\src\share\vm\runtime\perfdata.cpp @ 287]
        13aafab0 73781b95 737c6327 13cbe400 737c63d6 jvm!perfMemory_exit+0x20 [c:\jprt\t\p1\163041.mikael\s\hotspot\src\share\vm\runtime\perfmemory.cpp @ 80]
        13aafab4 737c6327 13cbe400 737c63d6 00000000 jvm!exit_globals+0x15 [c:\jprt\t\p1\163041.mikael\s\hotspot\src\share\vm\runtime\init.cpp @ 157]
        13aafabc 737c63d6 00000000 012ef9ec 739e4bc4 jvm!VM_Exit::doit+0x17 [c:\jprt\t\p1\163041.mikael\s\hotspot\src\share\vm\runtime\vm_operations.cpp @ 452]
        13aafaec 737c545e 00000000 13cbe400 73a00f9c jvm!VM_Operation::evaluate+0x76 [c:\jprt\t\p1\163041.mikael\s\hotspot\src\share\vm\runtime\vm_operations.cpp @ 64]
        13aafb6c 737c593e 012ef9ec 00016003 13cbe400 jvm!VMThread::evaluate_operation+0xbe [c:\jprt\t\p1\163041.mikael\s\hotspot\src\share\vm\runtime\vmthread.cpp @ 357]
        13aafcdc 737c5c2e 13cbe400 13aafd38 77d5fac9 jvm!VMThread::loop+0x38e [c:\jprt\t\p1\163041.mikael\s\hotspot\src\share\vm\runtime\vmthread.cpp @ 475]
        13aafd08 7382062e 00000000 00000001 738205c6 jvm!VMThread::run+0xae [c:\jprt\t\p1\163041.mikael\s\hotspot\src\share\vm\runtime\vmthread.cpp @ 270]
        13aafd4c 73d5c556 13cbe400 1baed8a9 00000000 jvm!java_start+0xce [c:\jprt\t\p1\163041.mikael\s\hotspot\src\os\windows\vm\os_windows.cpp @ 449]

              Assignee:
              Christian Tornqvist
              Reporter:
              Christian Tornqvist
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

                Created:
                Updated:
                Resolved: