8058251: assert(_count > 0) failed: Negative counter when running runtime/NMT/MallocTrackingVerify.java

Fixed an issue when overflowing the MallocSite hash table bucket

Reviewed-by: coleenp, gtriantafill